Resolved a css calculation problem that shows up on Firefox and is caused by dividing two percentages together

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
   --primary: #1677ff;
   --background: oklch(96% 0 0);
   --text: oklch(from var(--background) calc(1 - l) c h);
-  --accent: 10%;
+  --accent: 0.1;
   --transition-duration: 0.2s;
   --transition-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
@@ -42,8 +42,8 @@ code {
 }
 
 [data-theme] {
-  --theme-hover: oklch(from var(--theme) calc(l + var(--accent) / 100%) c h);
-  --theme-active: oklch(from var(--theme) calc(l - var(--accent) / 100%) c h);
+  --theme-hover: oklch(from var(--theme) calc(l + var(--accent)) c h);
+  --theme-active: oklch(from var(--theme) calc(l - var(--accent)) c h);
   --theme: var(--text);
 }
 
